Move the js src folder into the js folder.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Cell.js"></script>
+  <script type="text/javascript" src="js/src/cell.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/CellSpec.js"></script>
+  <script type="text/javascript" src="spec/cellSpec.js"></script>
 
 </head>
 
