Create a board that converts a puzzle string into cells
* Create board that takes a string of cell values
* Create board with empty cells array
* Create "createBoard", which splits the string, makes
  a cell out of each value with the value and position in
  the string, and gets the row, column and box of each cell

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="js/src/cell.js"></script>
+  <script type="text/javascript" src="js/src/board.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/cellSpec.js"></script>
+  <script type="text/javascript" src="spec/boardSpec.js"></script>
 
 </head>
 
