--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <script src="js/application.js"></script>
-    <script src="src/cell.js"></script>
+    <script src="js/src/cell.js"></script>
+    <script src="js/src/board.js"></script>
 
   </head>
   <body>
