Create guesser to eliminate impossible values
* Created findSameValues functions for box, row, and
  column, given a particular cell object
* Guesser will remove the "impossible" values that it
  finds for a cell

Next steps:
* Code is not super DRY--repeat for each of row, col and
  box
* Sanitize the impossible values array. As of now, it has
  duplicates. This doesn't ruin the code logic, but does
  hamper performance.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="js/application.js"></script>
     <script src="js/src/cell.js"></script>
     <script src="js/src/board.js"></script>
+    <script src="js/src/guesser.js"></script>
 
   </head>
   <body>
