--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="js/src/cell.js"></script>
   <script type="text/javascript" src="js/src/board.js"></script>
+   <script type="text/javascript" src="js/src/guesser.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/cellSpec.js"></script>
   <script type="text/javascript" src="spec/boardSpec.js"></script>
+    <script type="text/javascript" src="spec/guesserSpec.js"></script>
 
 </head>
 
