--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <script src="js/application.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/src/cell.js"></script>
     <script src="js/src/board.js"></script>
     <script src="js/src/guesser.js"></script>
-
+    <script src="js/application.js"></script>
   </head>
   <body>
 
