--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
   <head>
+    <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/src/cell.js"></script>
     <script src="js/src/board.js"></script>
     <script src="js/src/guesser.js"></script>
+    <script src="js/src/view.js"></script>
     <script src="js/application.js"></script>
   </head>
   <body>
-
-    <h1>Hi</h1>
+    <section class="container">
+      <div class="board">
+      </div>
+    </section>
   </body>
 
 </html>
