--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/src/board.js"></script>
     <script src="js/src/guesser.js"></script>
     <script src="js/src/view.js"></script>
+    <script src="js/src/game.js"></script>
     <script src="js/application.js"></script>
   </head>
   <body>
