--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,15 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="js/src/cell.js"></script>
   <script type="text/javascript" src="js/src/board.js"></script>
-   <script type="text/javascript" src="js/src/guesser.js"></script>
+  <script type="text/javascript" src="js/src/guesser.js"></script>
+  <script type="text/javascript" src="js/src/game.js"></script>
+  <script type="text/javascript" src="js/src/view.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/cellSpec.js"></script>
   <script type="text/javascript" src="spec/boardSpec.js"></script>
-    <script type="text/javascript" src="spec/guesserSpec.js"></script>
+  <script type="text/javascript" src="spec/guesserSpec.js"></script>
+  <script type="text/javascript" src="spec/gameSpec.js"></script>
 
 </head>
 
