--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
+
   <script type="text/javascript" src="js/src/cell.js"></script>
   <script type="text/javascript" src="js/src/board.js"></script>
   <script type="text/javascript" src="js/src/guesser.js"></script>
@@ -19,6 +20,7 @@
   <script type="text/javascript" src="js/src/view.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/fixtures.js"></script>
   <script type="text/javascript" src="spec/cellSpec.js"></script>
   <script type="text/javascript" src="spec/boardSpec.js"></script>
   <script type="text/javascript" src="spec/guesserSpec.js"></script>
