Add functionality to choose puzzle, initiate solve
  * Users can pick from dropdown which puzzle they want to solve
  * Users click 'load' to load the puzzle in the view
  * Users click 'sovle' to initiate the solve
  * Add a clearBoard to clear the board when a user picks
    a new baord to load

--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
   </head>
   <body>
     <section class="container">
-      <div class="board">
-      </div>
+      <article>
+        <form action="#">
+          <select name="puzzles" id="puzzles">
+            <option value="005030081902850060600004050007402830349760005008300490150087002090000600026049503">Easy 1</option>
+            <option value="020810740700003100090002805009040087400208003160030200302700060005600008076051090">Easy 2</option>
+          </select>
+          <button type="button" class="load">Load</button>
+          <button type="button" class="solve">Solve!</button>
+        </form>
+
+      </article>
+      <article class="board">
+
+      </article>
     </section>
   </body>
 
